--- a/css/style.css
+++ b/css/style.css
@@ -1568,7 +1568,11 @@ article img.pull-right, article .align-right{
 		margin:0 20px 0 0;
 	}	
 }
-
+@media (max-width: 408px){
+	.navbar-brand {
+		margin-top: -14%;
+	}
+}
 @media (max-width: 767px) {
 
   body {
@@ -1576,7 +1580,6 @@ article img.pull-right, article .align-right{
     padding-left: 0;
   }
 	.navbar-brand {
-		margin-top: 10px;
 		border-bottom: none;
 		margin-top: -3%;
 	}
